# assetiweave

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  components.json  go.mod  index.html  main.go  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
cli/: go.mod  go.sum
cmd/: api.go  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/bundled/conversation-adapters/antigravity/: adapter.mjs  conversation-adapter.json
src-tauri/bundled/conversation-adapters/claude-code/: adapter.mjs  conversation-adapter.json
src-tauri/bundled/conversation-adapters/codex/: adapter.mjs  conversation-adapter.json
src-tauri/bundled/conversation-adapters/opencode/: adapter.mjs  conversation-adapter.json
src-tauri/capabilities/: default.json
src-tauri/codex/unknown-project/: 查明-147收益原因-a4881f5b.md
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202606180001_initial_schema.sql  202606270001_tenant_identity.sql  202606270002_tenant_scope_catalog.sql  202606270003_tenant_scope_conversations.sql  202606290001_conversation_part_translations.sql  202607040001_conversation_adapter_packages.sql  202607060001_remove_web_record_session_project_path.sql  202607150001_conversation_adapter_package_runtime_v2.sql  202607150002_conversation_adapter_catalog_release_details.sql  202607150003_scope_official_conversation_package_ids.sql  202607160001_conversation_adapter_catalog_release_source.sql  202607160002_conversation_session_observations.sql  202607170001_portable_path_anchors.sql
src-tauri/src/: app_settings.rs  background_tasks.rs  command_registry.rs  commands.rs  defaults.rs  engine.rs  lib.rs  logs.rs  main.rs  path_utils.rs  platform.rs  policy.rs  runtime.rs  service.rs  targeting.rs  types.rs
src-tauri/src/adapters/: app_state.rs  cli_tools.rs  mod.rs  platform.rs  prompt_clipboard.rs
src-tauri/src/adapters/engine/: mod.rs  policy.rs  protocol.rs  registry.rs  runtime.rs  transport.rs
src-tauri/src/adapters/tauri/: background_tasks.rs  commands.rs  mod.rs
src-tauri/src/backend/: app_paths.rs  app_settings.rs  card_translation.rs  data_backup.rs  defaults.rs  host_filesystem.rs  host_paths.rs  host_process.rs  logs.rs  mod.rs  operation_log.rs  path_utils.rs  targeting.rs
src-tauri/src/backend/application/: assets.rs  card_translation.rs  conversation_adapter_catalog_v2.rs  conversation_adapters.rs  conversation_records.rs  conversation_script_catalog.rs  mod.rs  params.rs  prelude.rs  profiles_navigation.rs  service.rs  skill_remote.rs  skills.rs  sources.rs  system.rs  tenants.rs  tests.rs  utils.rs
src-tauri/src/backend/capabilities/: catalog.rs  fs_utils.rs  groups.rs  mod.rs  mounts.rs  prelude.rs  profiles.rs  sources.rs
src-tauri/src/backend/conversations/: codex.rs  external.rs  harvester.rs  io_utils.rs  jsonl.rs  mod.rs  official.rs  opencode.rs  package.rs  prelude.rs  readers.rs  sqlite.rs  tests.rs  types.rs
src-tauri/src/backend/data_backup/: tests.rs
src-tauri/src/backend/dto/: mod.rs  types.rs
src-tauri/src/conversations/: mod.rs
src-tauri/src/executor/: mod.rs
src-tauri/src/models/: assets.rs  mod.rs
src-tauri/src/planner/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/store/: asset_repo.rs  codec.rs  conversation_repo.rs  deployment_repo.rs  group_repo.rs  menu_repo.rs  mod.rs  mount_observation_repo.rs  mount_repo.rs  profile_repo.rs  schema.rs  shortcut_repo.rs  skill_remote_repo.rs  source_repo.rs  sql.rs  web_record_repo.rs
(+541 files in other folders)
