[package]
name = "assetiweave"
version = "0.1.0"
description = "Local-first AI file asset management desktop app"
authors = ["AssetIWeave"]
license = "MIT"
edition = "2021"

[lib]
name = "assetiweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
assetiweave-core = { path = "../crates/assetiweave-core" }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
globset = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
