[package]
name = "assetiweave"
version = "0.2.4"
description = "Local-first AI file asset management desktop app"
authors = ["AssetIWeave"]
license = "MIT"
edition = "2021"
rust-version = "1.96.0"
default-run = "assetiweave"

[lib]
name = "assetiweave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
globset = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.0"
tokio = { version = "1", features = ["rt", "time"] }
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
